# label-studio

./: .bash_history  .black  .codespellrc  .deepsource.toml  .dockerignore  .editorconfig  .env.development  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .lycheeignore  .npmignore  .pre-commit-config.yaml  .pre-commit-dev.yaml  .prettierrc  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cloudrun  Dockerfile.heroku  Dockerfile.hgface  Dockerfile.label_anything  Dockerfile.label_anythingjp  Dockerfile.redhat  Dockerfile.testing  INFO.md  MANIFEST.in  Makefile  NOTICE  Procfile  README-PACHD-INTEGRATION.md  README.cn.md  README.md  abtest.sql  app.json  azuredeploy.json  (+36 more)
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: CODEOWNERS  autolabeler.yml  dependabot.yml  pr-title-checker-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  content_creator_program.md  custom.md  feature_request.md
.github/codeql/: codeql-config.yaml
.github/workflows/: algolia-crawler.yml  bandit.yml  biome.yml  blue.yml  build.yml  build_pypi.yml  bump-helm-chart.yml  cancel_cicd_pipeline.yml  cicd_pipeline.yml  codeql.yml  codespell.yml  cut-off-release-branch.yml  delete_pr_branch.yml  docker-build-ontop.yml  docker-build-ubi.yml  docker-build.yml  docker-command.yml  docker-release-promote.yml  docs-enterprise.yml  docs.yml  draft-new-hotfix-release.yml  e2e-tests.yml  feature-flags-update.yml  ff-command.yml  follow-merge-lsf-sync-schedule.yml  follow-merge-sync-pr.yml  follow-merge-upstream-repo-sync-monorepo.yml  follow-merge-upstream-repo-sync.yml  frontend-build.yml  frontend-command.yml  git-command.yml  gitleaks.yml  help-command.yml  invite-check.yml  jira-command.yml  link-check.yml  master.yaml  on_premise-cut-off-release-branch.yml  pr-labeler.yml  publish.yml  (+31 more)
Input/coco/: result.json
Output/coco/: Metrics.xlsx
backend/: LICENSE  README.md  config.json  db.py  label_config.xml  logger.json  ml_api.py  requirements.txt  server.py  setup.py  start.sh  utils.py
backend/converter/: README.md  cli.py  converter.py  requirements.txt  tf_ner.py  utils.py
backend/label_studio/: config.json  server.py
backend/misc/: utils.py
backend/templates/: header.html  help_import.html  import.html  index.html  tasks.html
backend/utils/: analytics.py  db.py  functions.py  misc.py  models.py  prompts.py  uploader.py  utils.py  validation.py
build_tmp/: asset-manifest.json  index.html  precache-manifest.cca328f4230c35fd9735a392ac18ae2a.js  service-worker.js
cf/: Dockerrun.aws.json  README.md  TODO.md  check_stage.sh  deploy-environment.sh  deploy-infra.sh  deploy.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  ecr-login.sh  template.yaml
cf/templates/: backend.yml  bucket_source_bundle.yml  ecr.yml  edge_assets.yml
deploy/: default.conf  docker-entrypoint.sh  gunicorn.conf.py  heroku_run.sh  init-pachyderm.sh  install_npm.sh  prebuild.sh  prebuild_wo_frontend.sh  requirements-dev.txt  requirements-mw.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt  run_image_prebuild.sh  start_label_studio.sh  uwsgi.ini  wait-for-postgres.sh
docs/: .gitignore  CNAME  CONTRIBUTING.md  Embed.md  README.md  Tags.md  _config.yml  _multiconfig.yml  algolia-search-config.json  enterprise.yml  netlify.toml  opensource.yml  package-lock.json  package.json
e2e/: .gitignore  README.md  codecept.conf.js  jsconfig.json  package-lock.json  package.json  steps.d.ts  steps_file.js
frontend/: README.md
hooks/: pre_build
label_studio/: .coveragerc  README.md  __init__.py  blueprint.py  config.json  constants.py  default_hotkeys.json  deprecated.py  feature_flags.json  iap_auth.py  logger.json  manage.py  mypy.ini  new_urls.json  package-lock.json  package.json  project.py  pytest.ini  server.py  setup.cfg  sitecustomize.py  tailwind.config.js  tasks.py
label_studio_withoutsignin/: __init__.py  manage.py  server.py
labeling_project/: config.json  config.xml  source.json  tasks.json
licenses/: python_license.txt
mydata/: .gitkeep
nginx/: ls.conf
public/: index.html
scripts/: build-without-hash.js  build-without-split.js  build_docker.sh  build_docker_and_start.sh  check_rqworker.py  copy-built-scripts.sh  copy.sh  get-build.js  get-lsf-build.js  nlpssc_setup.sh  run-demo.sh  run_nlpssc_label_studio.sh  serve_local_files.sh  split_import_json.py  start.sh  update_ml_tutorials.py  wait-for-it.sh
sensortypes/: HAM-IMU_MPU-9250_1191.yaml  Phillips_Cam1_1.yaml  example_config.txt
src/: index.js  serviceWorker.js  setupTests.js
test/: ui_test_label_studio.py
tools/: README.md  run.sh  setup.sh  start-existing-project.sh
venv_archive/: label_studio_env.tar.xz.partap
web/: .env.example  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .pnp.cjs  .pnp.loader.mjs  .stylelintrc.json  .yarnrc.yml  README.md  babel.config.json  biome.json  biome.jsonc  nx.json  package-lock.json  package.json  process.py  release.js  scss.d.ts  tsconfig.base.json  vite.config.ts  vite.lib.config.ts  webpack.config.js
(+5445 files in other folders)
